--- a/src/main/webapp/css/BackgroundImage.css
+++ b/src/main/webapp/css/BackgroundImage.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 
 /* Set a background image by replacing the URL below */
 body {
-  background: url('https://i.imgur.com/48w12Pg.jpg') no-repeat center center fixed;
+  background: url('https://www.esa.int/var/esa/storage/images/esa_multimedia/images/2014/02/the_sentinel_family/14297746-1-eng-GB/The_Sentinel_family.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
